2006-04-11  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/sa-kern-abi.h: Deprecate struct
	ib_kern_path_rec name; struct ibv_kern_path_rec is now preferred.

	* include/infiniband/sa.h: Deprecate struct ib_sa_XXX names;
	struct ibv_sa_XXX is now preferred.

	* src/marshall.c, include/infiniband/marshall.h: Deprecate
	ib_copy_XXX() names; ibv_copy_XXX() is preferred.  Add stub
	wrappers with the old names so old binaries still work.

2006-04-11  Hoang-Nam Nguyen  <HNGUYEN@de.ibm.com>

	* src/verbs.c (ibv_rate_to_mult, mult_to_ibv_rate): Add new
	functions to convert between IB rate enums and multiples of the
	base 2.5 Gb/sec rate.

2006-04-11  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/verbs.h: Add __attribute_const macro to
	portably mark functions as __attribute__((const))

2006-03-28  Roland Dreier  <rdreier@cisco.com>

	* src/init.c (load_driver): Print warning if dlopen() of a driver
	plugin fails.

2006-03-22  Dotan Barak  <dotanb@mellanox.co.il>

	* examples/asyncwatch.c: Print asynchronous event name as well as
	raw integer value.
	
2006-03-22  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/verbs.h (ibv_req_notify_cq): Document
	parameters better.

2006-03-16  Roland Dreier  <rdreier@cisco.com>

	* src/cmd.c, src/device.c, src/memory.c, src/verbs.c: Add include
	of <stdlib.h> to get a declaration of free() and avoid compile
	warnings.

2006-03-14  Roland Dreier  <rdreier@cisco.com>

	* Release version 1.0.2.

	* Makefile.am (EXTRA_DIST): Remove debian/ directory from
	tarballs, since Debian policy is that upstream tarballs should not
	include it.

2006-03-13  Roland Dreier  <rdreier@cisco.com>

	* Release version 1.0.1.

	* src/init.c (check_abi_version), src/verbs.c (ibv_query_gid,
	ibv_query_pkey): Use sysfs_open_attribute() and
	sysfs_read_attribute() instead of the deprecated function
	sysfs_read_attribute_value(), which is no longer present in
	libsysfs2 (which is already in Debian and Ubuntu).
